--- a/0505_붓꽃 머신러닝 복습.ipynb
+++ b/0505_붓꽃 머신러닝 복습.ipynb
@@ -44,7 +44,7 @@
     }
    ],
    "source": [
-    "X = x.reshape(-1, 1)\n",
+    "X = x.reshape(-1, 1)    # X를 x값의 2차원 배열로 변경\n",
     "X.shape"
    ]
   },
@@ -81,24 +81,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 98,
    "id": "678d952d",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal_length</th>\n",
+       "      <th>sepal_width</th>\n",
+       "      <th>petal_length</th>\n",
+       "      <th>petal_width</th>\n",
+       "      <th>species</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array(['setosa', 'versicolor', 'virginica'], dtype=object)"
+       "   sepal_length  sepal_width  petal_length  petal_width species\n",
+       "0           5.1          3.5           1.4          0.2  setosa\n",
+       "1           4.9          3.0           1.4          0.2  setosa\n",
+       "2           4.7          3.2           1.3          0.2  setosa\n",
+       "3           4.6          3.1           1.5          0.2  setosa\n",
+       "4           5.0          3.6           1.4          0.2  setosa"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "iris.head()\n",
-    "iris.species.unique()"
+    "# iris.species.unique()"
    ]
   },
   {
@@ -120,7 +196,7 @@
    ],
    "source": [
     "X = iris.drop(\"species\", axis = 1)\n",
-    "X.shape"
+    "X.shape   # iris배열에서 species열을 드랍하여 150행 4열의 2차원 배열이 되었다."
    ]
   },
   {
@@ -142,7 +218,7 @@
    ],
    "source": [
     "y = iris[\"species\"]\n",
-    "y.shape"
+    "y.shape   # 분류를 위해 y값을 species 열의 값을 추가한 1차원 배열로 생성"
    ]
   },
   {
@@ -236,7 +312,7 @@
     }
    ],
    "source": [
-    "iris.feature_names"
+    "iris.feature_names     # x값의 열(속성) 이름들"
    ]
   },
   {
@@ -261,7 +337,7 @@
     }
    ],
    "source": [
-    "iris.data[:5]"
+    "iris.data[:5]    # sklearn의 iris는 seaborn과는 달리 species가 드랍된 상태로 데이터가 존재한다."
    ]
   },
   {
